--- a/EC2/cloudformation-redundant_centos.template
+++ b/EC2/cloudformation-redundant_centos.template
@@ -158,7 +158,7 @@
     "CloudFormationStackVPC": {
       "Type" : "AWS::CloudFormation::Stack",
       "Properties" : {
-        "TemplateURL" : "https://raw.github.com/hashnao/aws-cloudformation/master/EC2/vpc.template",
+        "TemplateURL" : "https://s3-ap-northeast-1.amazonaws.com/hashnao/aws-cloudformation/EC2/vpc.template",
         "TimeoutInMinutes" : "3",
         "Parameters" : {
           "CustomerName" : { "Ref": "CustomerName" },
@@ -170,7 +170,7 @@
     "CloudFormationStackEC2": {
       "Type" : "AWS::CloudFormation::Stack",
       "Properties" : {
-        "TemplateURL" : "https://raw.github.com/hashnao/aws-cloudformation/master/EC2/ec2-redundant_centos.template",
+        "TemplateURL" : "https://s3-ap-northeast-1.amazonaws.com/hashnao/aws-cloudformation/EC2/ec2-redundant_centos.template",
         "Parameters" : {
           "CustomerName" : { "Ref": "CustomerName" },
           "VPCCIDR" : { "Ref": "VPCCIDR" },
