--- a/EC2/cloudformation-redundant.template
+++ b/EC2/cloudformation-redundant.template
@@ -20,52 +20,38 @@
     },
 
     "VPC" : {
-      "AllowedPattern" : "^vpc-[0-9a-z]{8}",
       "Description" : "VPC ID",
-      "Type": "String",
-      "Default" : "vpc-xxxxxxxx"
+      "Type": "AWS::EC2::VPC::Id"
     },
 
     "SubnetPublicVarA00" : {
-      "AllowedPattern" : "^subnet-[0-9a-z]{8}",
       "Description" : "Subnet ID",
-      "Type": "String",
-      "Default" : "subnet-xxxxxxxx"
+      "Type": "AWS::EC2::Subnet::Id"
     },
 
     "SubnetPublicVarC01" : {
-      "AllowedPattern" : "^subnet-[0-9a-z]{8}",
       "Description" : "Subnet ID",
-      "Type": "String",
-      "Default" : "subnet-xxxxxxxx"
+      "Type": "AWS::EC2::Subnet::Id "
     },
 
     "SubnetPublicVarA02" : {
-      "AllowedPattern" : "^subnet-[0-9a-z]{8}",
       "Description" : "Subnet ID",
-      "Type": "String",
-      "Default" : "subnet-xxxxxxxx"
+      "Type": "AWS::EC2::Subnet::Id"
     },
 
     "SubnetPublicVarC03" : {
-      "AllowedPattern" : "^subnet-[0-9a-z]{8}",
       "Description" : "Subnet ID",
-      "Type": "String",
-      "Default" : "subnet-xxxxxxxx"
+      "Type": "AWS::EC2::Subnet::Id"
     },
 
     "SubnetPublicFixA08" : {
-      "AllowedPattern" : "^subnet-[0-9a-z]{8}",
       "Description" : "Subnet ID",
-      "Type": "String",
-      "Default" : "subnet-xxxxxxxx"
+      "Type": "AWS::EC2::Subnet::Id",
     },
 
     "SubnetPublicFixC09" : {
-      "AllowedPattern" : "^subnet-[0-9a-z]{8}",
       "Description" : "Subnet ID",
-      "Type": "String",
-      "Default" : "subnet-xxxxxxxx"
+      "Type": "AWS::EC2::Subnet::Id"
     },
 
     "InstanceTypeWeb": {
@@ -104,12 +90,8 @@
 
     "KeyName": {
       "Description" : "Name of an existing EC2 KeyPair to enable SSH access to the instance",
-      "Type": "String",
-      "MinLength": "1",
-      "MaxLength": "255",
-      "AllowedPattern" : "[\\x20-\\x7E]*",
-      "Default" : "bbt-default",
-      "ConstraintDescription" : "can contain only ASCII characters."
+      "Type": "AWS::EC2::KeyPair::KeyName",
+      "Default" : "bbt-default"
     },
 
     "SecurityGroupCidrCustomer" : {
@@ -123,7 +105,7 @@
     },
 
     "SecurityGroupCidrOffice" : {
-      "Description": "Compnay's Gateway",
+      "Description": "Company's Gateway",
       "Type": "String",
       "MinLength": "9",
       "MaxLength": "18",
